tests/semantic_errors/andrei4_3.tl
require "ifj21"

global main : function()
global func : function()

function main()
end

main()
